--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Molfa — DST سريع</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<title>Molfa — تحويل صورة إلى تطريز DST</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
 body{font-family:Inter,system-ui,Arial; background:#f3f4f6; color:#111;}
@@ -14,36 +14,37 @@ button{cursor:pointer;}
 </head>
 <body class="min-h-screen flex flex-col">
 <header class="bg-indigo-700 text-white py-4 shadow text-center">
-<h1 class="text-xl font-semibold">Molfa — DST سريع مع JSON</h1>
-<p>تحويل الصورة إلى DST مع معاينة SVG وبيانات JSON بسرعة</p>
+<h1 class="text-xl font-semibold">Molfa — تحويل صورة إلى تطريز DST</h1>
+<p>اختر صورة، شاهد المخطط المطرز، وحمّل ملف DST النهائي</p>
 </header>
 
 <main class="container mx-auto p-4 md:p-6 flex-grow">
 <div class="bg-white rounded-xl shadow p-4 md:p-6">
 <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+
 <div>
 <label class="block font-medium">اختر صورة</label>
-<input id="file" type="file" accept="image/*" class="w-full p-2 border rounded"/>
+<input id="file" type="file" accept="image/*" class="w-full p-2 border rounded mt-1"/>
 
 <div class="mt-3">
 <label class="text-sm block mb-1">حجم الخلية (px)</label>
-<input id="cellSize" type="number" min="2" max="20" value="8" class="w-full p-2 border rounded"/>
+<input id="cellSize" type="number" min="2" max="20" value="6" class="w-full p-2 border rounded"/>
 </div>
 
 <div class="mt-3">
 <label class="text-sm block mb-1">طول الغرزة (px)</label>
-<input id="stitchStep" type="number" min="2" max="16" value="4" class="w-full p-2 border rounded"/>
+<input id="stitchStep" type="number" min="1" max="16" value="3" class="w-full p-2 border rounded"/>
 </div>
 
 <div class="mt-3">
 <label class="text-sm block mb-1">عدد ألوان الخيوط</label>
-<input id="numThreads" type="number" min="2" max="15" value="5" class="w-full p-2 border rounded"/>
+<input id="numThreads" type="number" min="2" max="10" value="5" class="w-full p-2 border rounded"/>
 </div>
 
 <div class="mt-4 flex flex-col gap-2">
-<button id="process" class="bg-indigo-600 text-white py-2 rounded">🔧 توليد المخطط</button>
+<button id="process" class="bg-indigo-600 text-white py-2 rounded">🔧 توليد تطريز</button>
 <button id="createDST" class="bg-purple-600 text-white py-2 rounded" disabled>📄 إنشاء ملف DST</button>
-<button id="downloadDST" class="bg-green-600 text-white py-2 rounded" disabled>⬇️ تنزيل الملف النهائي</button>
+<button id="downloadDST" class="bg-green-600 text-white py-2 rounded" disabled>⬇️ تنزيل DST</button>
 </div>
 
 <div class="mt-3">
@@ -59,45 +60,42 @@ button{cursor:pointer;}
 </div>
 <pre id="log" class="mono text-xs h-40 overflow-auto whitespace-pre-wrap bg-white p-2 rounded border mt-3"></pre>
 </div>
+
 </div>
 </div>
 </main>
 
 <script>
-function log(msg){ 
-  const el=document.getElementById('log'); 
-  el.textContent += '['+new Date().toLocaleTimeString()+'] '+msg + "\n"; 
-  el.scrollTop = el.scrollHeight; 
+function log(msg){
+  const el=document.getElementById('log');
+  el.textContent += '['+new Date().toLocaleTimeString()+'] '+msg+"\n";
+  el.scrollTop = el.scrollHeight;
 }
-function forceDownload(blob,name){ 
-  const url=URL.createObjectURL(blob); 
-  const a=document.createElement('a'); 
-  a.href=url; a.download=name; 
-  document.body.appendChild(a); 
-  a.click(); 
-  a.remove(); 
-  setTimeout(()=>URL.revokeObjectURL(url),2000); 
+function forceDownload(blob,name){
+  const url=URL.createObjectURL(blob);
+  const a=document.createElement('a');
+  a.href=url; a.download=name;
+  document.body.appendChild(a); a.click(); a.remove();
+  setTimeout(()=>URL.revokeObjectURL(url),2000);
 }
 
-const threadColors=[
-  "rgb(0,0,0)","rgb(255,255,255)","rgb(255,0,0)","rgb(0,255,0)","rgb(0,0,255)",
-  "rgb(255,255,0)","rgb(0,255,255)","rgb(255,0,255)"
-];
+// ألوان خيوط مشهورة
+const threadColors=["rgb(0,0,0)","rgb(255,0,0)","rgb(0,255,0)","rgb(0,0,255)","rgb(255,255,0)","rgb(255,0,255)","rgb(0,255,255)"];
 
 function buildDST(coords){
-  const header = new Uint8Array(512);
+  const header=new Uint8Array(512);
   const body=[];
-  let prevx=0, prevy=0;
+  let prevx=0,prevy=0;
   coords.forEach(p=>{
-    let x=Math.round(p[0]), y=Math.round(p[1]);
-    let dx=x-prevx, dy=y-prevy;
-    while(Math.abs(dx)>121 || Math.abs(dy)>121){
+    let x=Math.round(p[0]),y=Math.round(p[1]);
+    let dx=x-prevx,dy=y-prevy;
+    while(Math.abs(dx)>121||Math.abs(dy)>121){
       const sx=Math.max(-121,Math.min(121,dx));
       const sy=Math.max(-121,Math.min(121,dy));
-      body.push(sx&0xFF, sy&0xFF, 0x01);
+      body.push(sx&0xFF,sy&0xFF,0x01);
       dx-=sx; dy-=sy; prevx+=sx; prevy+=sy;
     }
-    body.push(dx&0xFF, dy&0xFF, 0x03);
+    body.push(dx&0xFF,dy&0xFF,0x03);
     prevx=x; prevy=y;
   });
   body.push(0x00,0x00,0xF3);
@@ -119,28 +117,24 @@ btn.addEventListener('click',()=>{
   const f=fileInput.files[0];
   if(!f){ alert('اختر صورة'); return; }
 
-  const cellSize=Number(document.getElementById('cellSize').value||8);
-  const stitchStep=Number(document.getElementById('stitchStep').value||4);
+  const cellSize=Number(document.getElementById('cellSize').value||6);
+  const stitchStep=Number(document.getElementById('stitchStep').value||3);
   const numThreads=Number(document.getElementById('numThreads').value||5);
   const reader=new FileReader();
   reader.onload=async()=>{
     const imgBlob=await (await fetch(reader.result)).blob();
     const img=await createImageBitmap(imgBlob);
 
-    const scaleFactor=Math.min(300/img.width,300/img.height,1); // تصغير الصورة لتسريع
-    const w=Math.floor(img.width*scaleFactor);
-    const h=Math.floor(img.height*scaleFactor);
+    const scale=Math.min(300/img.width,300/img.height,1);
+    const w=Math.floor(img.width*scale), h=Math.floor(img.height*scale);
     const off=new OffscreenCanvas(w,h);
     const ctx=off.getContext('2d');
     ctx.drawImage(img,0,0,w,h);
     const id=ctx.getImageData(0,0,w,h).data;
 
-    merged=[];
-    mergedColors=[];
-    const step=stitchStep;
+    merged=[]; mergedColors=[];
     for(let y=0;y<h;y+=cellSize){
       for(let x=0;x<w;x+=cellSize){
-        // متوسط اللون للخلية
         let rSum=0,gSum=0,bSum=0,cnt=0;
         for(let yy=y;yy<y+cellSize && yy<h;yy++){
           for(let xx=x;xx<x+cellSize && xx<w;xx++){
@@ -148,8 +142,7 @@ btn.addEventListener('click',()=>{
             rSum+=id[i]; gSum+=id[i+1]; bSum+=id[i+2]; cnt++;
           }
         }
-        const r=Math.round(rSum/cnt), g=Math.round(gSum/cnt), b=Math.round(bSum/cnt);
-        // أقرب لون خيط
+        const r=Math.round(rSum/cnt),g=Math.round(gSum/cnt),b=Math.round(bSum/cnt);
         let minDist=Infinity, chosen=threadColors[0];
         for(const c of threadColors.slice(0,numThreads)){
           const m=c.match(/\d+/g);
@@ -157,13 +150,12 @@ btn.addEventListener('click',()=>{
           const dist=dr*dr+dg*dg+db*db;
           if(dist<minDist){ minDist=dist; chosen=c; }
         }
-        // إضافة غرزة واحدة لكل خلية (يمكن زيادة الخطوة لاحقاً)
         merged.push([x+cellSize/2,y+cellSize/2]);
         mergedColors.push(chosen);
       }
     }
 
-    // إنشاء SVG سريع
+    // SVG المعاينة
     let svg=`<svg xmlns='http://www.w3.org/2000/svg' width='${w}' height='${h}' viewBox='0 0 ${w} ${h}'>`;
     svg+=`<rect width='100%' height='100%' fill='white'></rect>`;
     for(let i=0;i<merged.length;i++){
@@ -172,11 +164,10 @@ btn.addEventListener('click',()=>{
     svg+=`</svg>`;
     preview.innerHTML=`<object type="image/svg+xml" data="data:image/svg+xml;base64,${btoa(svg)}" style="width:100%;height:100%"></object>`;
 
-    // JSON لكل الغرز
     const stitchJSON=merged.map((p,i)=>({index:i+1,x:p[0],y:p[1],color:mergedColors[i]}));
     document.getElementById('stitchData').textContent=JSON.stringify(stitchJSON,null,2);
 
-    log('تم توليد المخطط بسرعة — غرز: '+merged.length);
+    log('تم تحويل الصورة إلى تطريز — غرز: '+merged.length);
     createBtn.disabled=false;
   };
   reader.readAsDataURL(f);
