--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <style>
 body{font-family:Inter,system-ui,Arial; background:#f3f4f6; color:#111;}
 .mono{font-family:ui-monospace,monospace;}
-.svg-wrap{width:100%;height:100%;display:flex;align-items:center;justify-content:center;}
+.svg-wrap{width:100%;height:100%;display:flex;align-items:center;justify-content:center; border:1px solid #ccc; background:white;}
 button{cursor:pointer;}
 </style>
 </head>
 <body class="min-h-screen flex flex-col">
+
 <header class="bg-indigo-700 text-white py-4 shadow text-center">
 <h1 class="text-xl font-semibold">Molfa — تحويل صورة إلى تطريز DST</h1>
 <p>اختر صورة، شاهد المخطط المطرز، وحمّل ملف DST النهائي</p>
@@ -43,7 +44,6 @@ button{cursor:pointer;}
 
 <div class="mt-4 flex flex-col gap-2">
 <button id="process" class="bg-indigo-600 text-white py-2 rounded">🔧 توليد تطريز</button>
-<button id="createDST" class="bg-purple-600 text-white py-2 rounded" disabled>📄 إنشاء ملف DST</button>
 <button id="downloadDST" class="bg-green-600 text-white py-2 rounded" disabled>⬇️ تنزيل DST</button>
 </div>
 
@@ -79,7 +79,7 @@ function forceDownload(blob,name){
   setTimeout(()=>URL.revokeObjectURL(url),2000);
 }
 
-// ألوان خيوط مشهورة
+// ألوان خيوط
 const threadColors=["rgb(0,0,0)","rgb(255,0,0)","rgb(0,255,0)","rgb(0,0,255)","rgb(255,255,0)","rgb(255,0,255)","rgb(0,255,255)"];
 
 function buildDST(coords){
@@ -107,11 +107,10 @@ function buildDST(coords){
 
 const fileInput=document.getElementById('file');
 const btn=document.getElementById('process');
-const createBtn=document.getElementById('createDST');
 const downloadBtn=document.getElementById('downloadDST');
 const preview=document.getElementById('svgPreview');
 
-let merged=[], dstFile=null, mergedColors=[];
+let merged=[], mergedColors=[], dstFile=null;
 
 btn.addEventListener('click',()=>{
   const f=fileInput.files[0];
@@ -142,7 +141,7 @@ btn.addEventListener('click',()=>{
             rSum+=id[i]; gSum+=id[i+1]; bSum+=id[i+2]; cnt++;
           }
         }
-        const r=Math.round(rSum/cnt),g=Math.round(gSum/cnt),b=Math.round(bSum/cnt);
+        const r=Math.round(rSum/cnt), g=Math.round(gSum/cnt), b=Math.round(bSum/cnt);
         let minDist=Infinity, chosen=threadColors[0];
         for(const c of threadColors.slice(0,numThreads)){
           const m=c.match(/\d+/g);
@@ -168,16 +167,10 @@ btn.addEventListener('click',()=>{
     document.getElementById('stitchData').textContent=JSON.stringify(stitchJSON,null,2);
 
     log('تم تحويل الصورة إلى تطريز — غرز: '+merged.length);
-    createBtn.disabled=false;
+    dstFile=buildDST(merged);
+    downloadBtn.disabled=false;
   };
   reader.readAsDataURL(f);
-});
-
-createBtn.addEventListener('click',()=>{
-  if(!merged.length){ alert('لا يوجد تصميم لإنشاء الملف'); return; }
-  dstFile=buildDST(merged);
-  log('تم إنشاء ملف DST النهائي');
-  downloadBtn.disabled=false;
 });
 
 downloadBtn.addEventListener('click',()=>{
@@ -186,5 +179,6 @@ downloadBtn.addEventListener('click',()=>{
   log('تم تنزيل الملف النهائي');
 });
 </script>
+
 </body>
 </html>
